--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "customer-tools/phalapi-kernal",
-  "description": "PhalApi v2.x 自定义 框架核心部分",
+  "description": "PhalApi v2.x 自定义框架最核心部分",
   "keywords": [
     "api", "phalapi", "framework"
   ],
